# BackEnd/server/api/controllers/users/controller.ts
@@ -1,35 +1,63 @@
 import UserService from '../../services/user.service';
 import { Request, Response } from 'express';
+import { getURL } from '../../../common/myutils';
 
 export class Controller {
   all(req: Request, res: Response): void {
-    res
-    .status(201)
-    .location(`/api/v1/users/`)
-    .json({omj: 'nothing is nothing'});
+
+    UserService.all()
+    .then(r => res
+      .status(201)
+      .json(r.map(( {id, name, username, email}) =>({
+        id,
+        name,
+        username,
+        email,
+        link: getURL(req, `/api/v1/users/${id}` )
+      }))),
+    ).catch(err =>
+      res
+        .status(400)
+        .json({error: 'something went wrong'}),
+
+    );
+
   }
 
   byId(req: Request, res: Response): void {
-    UserService.byId(req.params.id).then(r => {
-      if (r) res.json(r);
-      else res.status(404).end();
-    });
+    UserService.byId(req.params.id)
+    .then(({id, name, username, email}) => {
+     res.json({id, name, username, email});
+    }).catch(err =>
+      res
+        .status(400)
+        .json({error: 'something went wrong'}),
+    );
+  }
+
+  getToken(req: Request, res: Response): void {
+    UserService.getToken(req.body.username, req.body.password, req.body.remember )
+    .then((r) => {
+     res.json(r);
+    }).catch(err =>
+      res
+        .status(400)
+        .json({error: err}),
+    );
   }
 
   create(req: Request, res: Response): void {
-       res
-    .status(201)
-    .json({omj: 'nothing is nothing'});
-    // UserService.create(req.body).then(r =>
-    //   res
-    //     .status(201)
-    //     .location(`/api/v1/users/${r.id}`)
-    //     .json(r),
-    // ).catch(err =>
-    //   res
-    //   .status(400)
-    //   .json(err),
-    // );
+
+    UserService.create(req.body).then(r =>
+      res
+        .status(201)
+        .location(`/api/v1/users/${r.id}`)
+        .json(r),
+    ).catch(err =>
+      res
+        .status(400)
+        .json({error: 'something went wrong'}),
+    );
   }
 }
 export default new Controller();
