# BackEnd/server/api/controllers/users/router.ts
@@ -3,4 +3,5 @@ import controller from './controller'
 export default express.Router()
     .post('/', controller.create)
     .get('/', controller.all)
-    .get('/:id', controller.byId);
+    .get('/:id', controller.byId)
+    .post('/gettoken', controller.getToken);
